# rsut_practice

./: .gitignore  Cargo.toml  README.md
associated_functions/src/: main.rs
basic_type/src/: main.rs
compound_types/src/: main.rs
flow_control/src/: main.rs
generics/src/: main.rs
ownership/src/: main.rs
patter_match/src/: main.rs
reference/src/: main.rs
string/src/: main.rs
